Update several pages

--- a/python.html
+++ b/python.html
@@ -65,6 +65,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
 <li><a href="poetry.html">Poetry</a></li>
+<li><a href="flake8.html">flake8</a></li>
 </ul>
 </div>
 </div>
@@ -151,6 +152,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 20일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
