--- a/sitemap.html
+++ b/sitemap.html
@@ -86,6 +86,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="vim.html">Vim</a></li>
 <li><a href="caffeinate.html">caffeinate</a></li>
 <li><a href="find.html">find</a></li>
+<li><a href="flake8.html">flake8</a></li>
 <li><a href="iconv.html">iconv</a></li>
 <li><a href="kubectl.html">kubectl</a></li>
 <li><a href="macos.html">macOS</a></li>
@@ -102,6 +103,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
 <li><a href="italian.html">이탈리아어 노트</a></li>
 <li><a href="python-links.html">파이썬(Python) 관련 링크 모음</a></li>
+<li><a href="korean.html">한국어 문법 노트</a></li>
 </ul>
 <div id="footer"><div id="time"></div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
