Update some pages

--- a/korean.html
+++ b/korean.html
@@ -44,6 +44,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org72c97f8">이 페이지는</a></li>
 <li><a href="#org7d917a5">되/돼</a></li>
 <li><a href="#org4957a18">게</a></li>
+<li><a href="#org2569c21">수밖에</a></li>
 </ul>
 </div>
 </nav>
@@ -75,6 +76,15 @@ gtag('config', 'UA-44534026-1');
 <div class="outline-text-2" id="text-org4957a18">
 <p>
 '뭐뭐 하는게' 👉 '뭐뭐 하는 게'
+</p>
+</div>
+</div>
+<div id="outline-container-org2569c21" class="outline-2">
+<h2 id="org2569c21">수밖에</h2>
+<div class="outline-text-2" id="text-org2569c21">
+<p>
+'뭐뭐 할 수 밖에' 가 아니라 '뭐뭐할 수밖에' 입니다. 개인적으로 아직도 자주
+틀리고 있는 문법입니다.
 </p>
 </div>
 </div>
