--- a/index.html
+++ b/index.html
@@ -144,16 +144,15 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><a href="english.html">영어 노트</a></li>
 <li><a href="italian.html">이탈리아어 노트</a></li>
+<li><a href="korean.html">한국어 문법 노트</a></li>
 </ul>
 
 <p>
-사이트의 모든 글 링크는 <a href="sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부
-링크가 걸리지 않은 페이지는 '폐기처분(?) 되었지만 404를 피하기 위해 그냥 남겨둔
-것'일 수도 있으니 주의(?) 부탁드립니다.
+사이트의 모든 글 링크는 <a href="sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부 링크가 걸리지 않은 페이지는 '폐기처분(?) 되었지만 404를 피하기 위해 그냥 남겨둔 것'일 수도 있으니 주의(?) 부탁드립니다.
 </p>
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 16일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 20일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
