--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -18,7 +18,7 @@
 <meta name="twitter:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
-<link rel="stylesheet" type="text/css" href="/static/style.css"/>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 <link rel="canonical" href="https://seorenn.github.io/doom-emacs-shortcuts.html"/>
 <link property="og:url" href="https://seorenn.github.io/doom-emacs-shortcuts.html"/>
@@ -31,9 +31,9 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-</head>
+
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script></head>
 <body>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Doom Emacs 단축키</h1>
@@ -194,8 +194,9 @@ gtag('config', 'UA-44534026-1');
 <h3 id="org5dbd544">점프(Jump)</h3>
 <div class="outline-text-3" id="text-org5dbd544">
 <ul class="org-ul">
-<li><code>f [character]</code> 해당 문자로 점프</li>
-<li><code>F [character]</code> 해당 문자로 역방향 점프</li>
+<li><code>f [character]</code> 해당 문자로 점프(vim)</li>
+<li><code>F [character]</code> 해당 문자로 역방향 점프(vim)</li>
+<li><code>t [character]</code> 해당 문자로 점프(evil-snipe)</li>
 <li><code>s [characters]</code> 문자 완성 형식으로 해당 문자열로 점프(evil-snipe)</li>
 <li><code>S [characters]</code> 문자 완성 형식으로 해당 문자열로 역방향 점프(evil-snipe)</li>
 <li><code>;</code> 계속 점프</li>
@@ -318,6 +319,6 @@ Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 14일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
