--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <meta name="twitter:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><link rel="stylesheet" type="text/css" href="/static/style.css"/>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 <link rel="canonical" href="https://seorenn.github.io"/>
 <link property="og:url" href="https://seorenn.github.io"/>
@@ -49,8 +50,7 @@ gtag('config', 'UA-44534026-1');
 </p>
 
 <p>
-모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을
-작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리쉬 합니다.
+모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을 작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리쉬 합니다.
 </p>
 
 <div id="outline-container-org164dc77" class="outline-2">
