Update ad codes

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -17,7 +17,6 @@
 <meta name="twitter:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 <link rel="canonical" href="https://seorenn.github.io/apple-dev-links.html"/>
@@ -33,6 +32,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</h1>
@@ -63,6 +63,7 @@ gtag('config', 'UA-44534026-1');
 Swift</a>: <code>NSPredicate</code> 가이드 글</li>
 <li><a target="_blank" href="https://sarunw.com/posts/sign-in-with-apple-1/">Sign in with Apple, Part 1:
 Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글</li>
+<li><a target="_blank" href="https://engineering.linecorp.com/ko/blog/ios-code-signing/?fbclid=IwAR1I2SIo6YNQGwCGNy5N64viCyQ4PiWm2-8pd-v-rp1aXpjJ9flP19rNBdg">iOS 코드 서명에 대해서</a>: 애플의 개발자 인증서나 프로비저닝을 분석한 글</li>
 </ul>
 </div>
 </div>
@@ -75,6 +76,6 @@ Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
