--- a/emacs-lisp-functions.html
+++ b/emacs-lisp-functions.html
@@ -18,7 +18,6 @@
 <meta name="twitter:image" content="https://seorenn.github.io/img/seorenn-logo.png" />
 <meta name="twitter:site" content="@seorenn" />
 <meta name="twitter:creator" content="@seorenn" />
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/style.css"/>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 <link rel="canonical" href="https://seorenn.github.io/emacs-lisp-functions.html"/>
@@ -34,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Emacs Lisp Functions</h1>
@@ -41,23 +41,50 @@ gtag('config', 'UA-44534026-1');
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
+<li><a href="#org68d6361">변수</a>
+<ul>
+<li><a href="#org1ff0c83">setq</a></li>
+<li><a href="#org5bbacd8">let</a></li>
+<li><a href="#org95d353f">let*</a></li>
+</ul>
+</li>
 <li><a href="#orgfcae0f2">리스트 관련</a>
 <ul>
-<li><a href="#orgc56f546">nth</a></li>
+<li><a href="#org6b0471d">아이템 꺼내오기</a></li>
+<li><a href="#org813826b">리스트 연장하기</a></li>
+<li><a href="#orgf2a89f9">리스트 추출하기</a></li>
+<li><a href="#org8e45051">리스트 변수 다루기</a></li>
+<li><a href="#org24b7082">number-sequence</a></li>
 <li><a href="#orgd4b2992">mapcar</a></li>
 <li><a href="#orgedfad72">mapconcat</a></li>
 </ul>
 </li>
-<li><a href="#org0225b10">문자열 생성 및 수정</a>
+<li><a href="#orgcf6136e">문자열 관련</a>
 <ul>
+<li><a href="#orgb4f023f">length</a></li>
 <li><a href="#orgf6894a5">concat</a></li>
+<li><a href="#org594586d">substring</a></li>
 <li><a href="#org5622c75">string-trim</a></li>
 <li><a href="#orgcfa871d">format</a></li>
 <li><a href="#orgce6dcc2">string-remove-prefix, string-remove-suffix</a></li>
-<li><a href="#orgd4a8f83">string=</a></li>
 <li><a href="#org25ccb93">string-match</a></li>
+<li><a href="#org185d3f2">number-to-string</a></li>
 </ul>
 </li>
+<li><a href="#org10a1d9e">조건문</a>
+<ul>
+<li><a href="#orgf8b63be">if</a></li>
+<li><a href="#orgc5a4e0e">비교 함수</a></li>
+<li><a href="#org08fe9ce">타입 확인</a></li>
+<li><a href="#org32110ee">string= 혹은 string-equal</a></li>
+</ul>
+</li>
+<li><a href="#org38d8399">루프</a>
+<ul>
+<li><a href="#orgdccc63a">while</a></li>
+</ul>
+</li>
+<li><a href="#org03a4b51">함수</a></li>
 <li><a href="#orge68f4e5">버퍼 관련</a>
 <ul>
 <li><a href="#org10438fc">generate-new-buffer</a></li>
@@ -95,19 +122,122 @@ gtag('config', 'UA-44534026-1');
 당연하게도 내용이 길어지면 여러 파일로 분리되어 정리될 수도 있습니다.
 </p>
 
+<div id="outline-container-org68d6361" class="outline-2">
+<h2 id="org68d6361">변수</h2>
+<div class="outline-text-2" id="text-org68d6361">
+</div>
+<div id="outline-container-org1ff0c83" class="outline-3">
+<h3 id="org1ff0c83">setq</h3>
+<div class="outline-text-3" id="text-org1ff0c83">
+<p>
+전역 변수를 생성합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(setq variable-name <span style="color: #da8548; font-weight: bold;">100</span>)
+(setq v1 <span style="color: #da8548; font-weight: bold;">1</span>
+      v2 <span style="color: #da8548; font-weight: bold;">2</span>
+      v3 <span style="color: #da8548; font-weight: bold;">3</span>)
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org5bbacd8" class="outline-3">
+<h3 id="org5bbacd8">let</h3>
+<div class="outline-text-3" id="text-org5bbacd8">
+<p>
+지역 변수를 생성합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">let</span> (a b)
+  ...)
+</pre>
+</div>
+<p>
+초기값도 사용 가능합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">let</span> ((a <span style="color: #da8548; font-weight: bold;">1</span>)
+      (b <span style="color: #da8548; font-weight: bold;">2</span>)
+      (c <span style="color: #da8548; font-weight: bold;">3</span>))
+  ... body ...)
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org95d353f" class="outline-3">
+<h3 id="org95d353f">let*</h3>
+<div class="outline-text-3" id="text-org95d353f">
+<p>
+지역 변수를 생성하는데 앞서 생성한 값을 생성하는데 참고할 수 있는 특수한 형태입니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">let*</span> ((a <span style="color: #da8548; font-weight: bold;">1</span>)
+       (b (+ a <span style="color: #da8548; font-weight: bold;">2</span>))
+       (c (/ b <span style="color: #da8548; font-weight: bold;">3</span>)))
+  ... body ...)
+</pre>
+</div>
+</div>
+</div>
+</div>
 <div id="outline-container-orgfcae0f2" class="outline-2">
 <h2 id="orgfcae0f2">리스트 관련</h2>
 <div class="outline-text-2" id="text-orgfcae0f2">
 </div>
-<div id="outline-container-orgc56f546" class="outline-3">
-<h3 id="orgc56f546">nth</h3>
-<div class="outline-text-3" id="text-orgc56f546">
-<p>
-리스트의 특정 위치의 아이템을 가져옵니다. (0 based index)
-</p>
+<div id="outline-container-org6b0471d" class="outline-3">
+<h3 id="org6b0471d">아이템 꺼내오기</h3>
+<div class="outline-text-3" id="text-org6b0471d">
 <div class="org-src-container">
-<pre class="src src-lisp">(nth <span style="color: #da8548; font-weight: bold;">3</span> '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span> <span style="color: #98be65;">"d"</span> <span style="color: #98be65;">"e"</span>))
-<span style="color: #5B6268;">;; </span><span style="color: #5B6268;">-&gt; "d"</span>
+<pre class="src src-lisp">(car '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span>))            <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">"a"</span>
+(nth <span style="color: #da8548; font-weight: bold;">3</span> '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span> <span style="color: #98be65;">"d"</span> <span style="color: #98be65;">"e"</span>))  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">"d"</span>
+(car (last '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span>)))     <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">"c"</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org813826b" class="outline-3">
+<h3 id="org813826b">리스트 연장하기</h3>
+<div class="outline-text-3" id="text-org813826b">
+<div class="org-src-container">
+<pre class="src src-lisp">(cons <span style="color: #98be65;">"a"</span> '(<span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span>))           <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">("a" "b" "c")</span>
+(cons '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span>) '(<span style="color: #98be65;">"c"</span> <span style="color: #98be65;">"d"</span>))    <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">(("a" "b") "c" "d")</span>
+(append '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span>) '(<span style="color: #98be65;">"c"</span> <span style="color: #98be65;">"d"</span>))  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">("a" "b" "c" "d")</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-orgf2a89f9" class="outline-3">
+<h3 id="orgf2a89f9">리스트 추출하기</h3>
+<div class="outline-text-3" id="text-orgf2a89f9">
+<div class="org-src-container">
+<pre class="src src-lisp">(cdr '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span>))           <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">("b" "c")</span>
+(nthcdr <span style="color: #da8548; font-weight: bold;">2</span> '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span> <span style="color: #98be65;">"d"</span>))  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">("c" "d")</span>
+(butlast '(<span style="color: #98be65;">"a"</span> <span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span>))       <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">("a" "b")</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org8e45051" class="outline-3">
+<h3 id="org8e45051">리스트 변수 다루기</h3>
+<div class="outline-text-3" id="text-org8e45051">
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">let</span> ((lst '(<span style="color: #98be65;">"b"</span> <span style="color: #98be65;">"c"</span>)))
+  (push <span style="color: #98be65;">"a"</span> lst)
+  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">lst -&gt; ("a" "b" "c")</span>
+  (pop lst)  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">-&gt; "a"</span>
+  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">lst -&gt; ("b" "c")</span>
+  )
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org24b7082" class="outline-3">
+<h3 id="org24b7082">number-sequence</h3>
+<div class="outline-text-3" id="text-org24b7082">
+<div class="org-src-container">
+<pre class="src src-lisp">(number-sequence <span style="color: #da8548; font-weight: bold;">3</span>)      <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">(3)</span>
+(number-sequence <span style="color: #da8548; font-weight: bold;">0</span> <span style="color: #da8548; font-weight: bold;">4</span>)    <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">(0 1 2 3 4)</span>
+(number-sequence <span style="color: #da8548; font-weight: bold;">0</span> <span style="color: #da8548; font-weight: bold;">9</span> <span style="color: #da8548; font-weight: bold;">2</span>)  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">(0 2 4 6 8)</span>
 </pre>
 </div>
 </div>
@@ -150,9 +280,21 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org0225b10" class="outline-2">
-<h2 id="org0225b10">문자열 생성 및 수정</h2>
-<div class="outline-text-2" id="text-org0225b10">
+<div id="outline-container-orgcf6136e" class="outline-2">
+<h2 id="orgcf6136e">문자열 관련</h2>
+<div class="outline-text-2" id="text-orgcf6136e">
+</div>
+<div id="outline-container-orgb4f023f" class="outline-3">
+<h3 id="orgb4f023f">length</h3>
+<div class="outline-text-3" id="text-orgb4f023f">
+<div class="org-src-container">
+<pre class="src src-lisp">(length <span style="color: #98be65;">"abcd"</span>)
+</pre>
+</div>
+<p>
+근데 <code>length</code> 는 다용도라 리스트 갯수 세기도 된답니다.
+</p>
+</div>
 </div>
 <div id="outline-container-orgf6894a5" class="outline-3">
 <h3 id="orgf6894a5">concat</h3>
@@ -163,6 +305,15 @@ gtag('config', 'UA-44534026-1');
 <div class="org-src-container">
 <pre class="src src-lisp">(concat <span style="color: #98be65;">"hello"</span> <span style="color: #98be65;">" "</span> <span style="color: #98be65;">"world!"</span>)
 <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">-&gt; "hello world!"</span>
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org594586d" class="outline-3">
+<h3 id="org594586d">substring</h3>
+<div class="outline-text-3" id="text-org594586d">
+<div class="org-src-container">
+<pre class="src src-lisp">(substring <span style="color: #98be65;">"abcde"</span> <span style="color: #da8548; font-weight: bold;">2</span> <span style="color: #da8548; font-weight: bold;">4</span>)  <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">-&gt; "cd"</span>
 </pre>
 </div>
 </div>
@@ -208,19 +359,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-orgd4a8f83" class="outline-3">
-<h3 id="orgd4a8f83">string=</h3>
-<div class="outline-text-3" id="text-orgd4a8f83">
-<p>
-문자열이 동일한지 비교합니다.
-</p>
-<div class="org-src-container">
-<pre class="src src-lisp">(<span style="color: #51afef;">when</span> (string= <span style="color: #98be65;">"aaa"</span> <span style="color: #98be65;">"aaa"</span>)
-  (message <span style="color: #98be65;">"both are aaa!"</span>)
-</pre>
-</div>
-</div>
-</div>
 <div id="outline-container-org25ccb93" class="outline-3">
 <h3 id="org25ccb93">string-match</h3>
 <div class="outline-text-3" id="text-org25ccb93">
@@ -232,6 +370,150 @@ gtag('config', 'UA-44534026-1');
 <span style="color: #5B6268;">;; </span><span style="color: #5B6268;">-&gt; 3</span>
 </pre>
 </div>
+</div>
+</div>
+<div id="outline-container-org185d3f2" class="outline-3">
+<h3 id="org185d3f2">number-to-string</h3>
+<div class="outline-text-3" id="text-org185d3f2">
+<div class="org-src-container">
+<pre class="src src-lisp">(number-to-string <span style="color: #da8548; font-weight: bold;">3</span>)
+</pre>
+</div>
+<p>
+반대로 <code>string-to-number</code> 도 있으니 참고합니다.
+</p>
+</div>
+</div>
+</div>
+<div id="outline-container-org10a1d9e" class="outline-2">
+<h2 id="org10a1d9e">조건문</h2>
+<div class="outline-text-2" id="text-org10a1d9e">
+</div>
+<div id="outline-container-orgf8b63be" class="outline-3">
+<h3 id="orgf8b63be">if</h3>
+<div class="outline-text-3" id="text-orgf8b63be">
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">if</span> (condition)
+    (then-statement)
+  (else-statement))
+</pre>
+</div>
+<p>
+condition 값은 <code>nil</code> 혹은 <code>()</code> 인 경우에만 False이고 나머지는 True라고 생각하면 됩니다.
+</p>
+
+<p>
+then-statement 와 else-statement는 둘 다 함수 하나만 쓸 수 있게 되어있습니다. 만약 여러 프로시져를 넣고 싶다면 <code>progn</code> 으로 블록을 정의해서 써야합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">if</span> (condition)
+    (<span style="color: #51afef;">progn</span>
+      (statement <span style="color: #da8548; font-weight: bold;">1</span>)
+      (statement <span style="color: #da8548; font-weight: bold;">2</span>))
+  (<span style="color: #51afef;">progn</span>
+    (statement <span style="color: #da8548; font-weight: bold;">3</span>)
+    (statement <span style="color: #da8548; font-weight: bold;">4</span>)))
+</pre>
+</div>
+<p>
+and, or, not 등은 함수로 쓸 수 있습니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(and cond1 cond2 ...)
+(or cond1 cond2 ...)
+(not (condition))
+</pre>
+</div>
+
+<p>
+else 처리가 필요 없다면 <code>when</code> 이나 <code>unless</code> 를 쓸 수도 있습니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">when</span> (condition)
+  (statement1)
+  (statement2))
+
+(<span style="color: #51afef;">unless</span> (false-condition)
+  (statement1)
+  (statement2))
+</pre>
+</div>
+<p>
+<code>when</code> 과 <code>unless</code> 는 <code>progn</code> 을 쓰지 않아도 여러 프로시져를 나열할 수 있습니다.
+</p>
+</div>
+</div>
+<div id="outline-container-orgc5a4e0e" class="outline-3">
+<h3 id="orgc5a4e0e">비교 함수</h3>
+<div class="outline-text-3" id="text-orgc5a4e0e">
+<div class="org-src-container">
+<pre class="src src-lisp">(equal <span style="color: #da8548; font-weight: bold;">10</span> <span style="color: #da8548; font-weight: bold;">10</span>)
+(equal <span style="color: #98be65;">"str"</span> <span style="color: #98be65;">"str"</span>)
+(equal '(<span style="color: #da8548; font-weight: bold;">1</span> <span style="color: #da8548; font-weight: bold;">2</span> <span style="color: #da8548; font-weight: bold;">3</span>) '(<span style="color: #da8548; font-weight: bold;">1</span> <span style="color: #da8548; font-weight: bold;">2</span> <span style="color: #da8548; font-weight: bold;">3</span>))
+(equal 'symb 'symb)
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org08fe9ce" class="outline-3">
+<h3 id="org08fe9ce">타입 확인</h3>
+<div class="outline-text-3" id="text-org08fe9ce">
+<div class="org-src-container">
+<pre class="src src-lisp">(integerp <span style="color: #da8548; font-weight: bold;">10</span>)
+(floatp <span style="color: #da8548; font-weight: bold;">3.14</span>)
+</pre>
+</div>
+</div>
+</div>
+<div id="outline-container-org32110ee" class="outline-3">
+<h3 id="org32110ee">string= 혹은 string-equal</h3>
+<div class="outline-text-3" id="text-org32110ee">
+<p>
+문자열이 동일한지 비교합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">when</span> (string= <span style="color: #98be65;">"aaa"</span> <span style="color: #98be65;">"aaa"</span>)
+  (message <span style="color: #98be65;">"both are aaa!"</span>)
+</pre>
+</div>
+</div>
+</div>
+</div>
+<div id="outline-container-org38d8399" class="outline-2">
+<h2 id="org38d8399">루프</h2>
+<div class="outline-text-2" id="text-org38d8399">
+</div>
+<div id="outline-container-orgdccc63a" class="outline-3">
+<h3 id="orgdccc63a">while</h3>
+<div class="outline-text-3" id="text-orgdccc63a">
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">while</span> (condition)
+  (statement1)
+  (statement2)
+  ...)
+</pre>
+</div>
+</div>
+</div>
+</div>
+<div id="outline-container-org03a4b51" class="outline-2">
+<h2 id="org03a4b51">함수</h2>
+<div class="outline-text-2" id="text-org03a4b51">
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">defun</span> <span style="color: #c678dd;">function-name</span> (param1 param2 ...)
+  <span style="color: #83898d;">"documentation"</span>
+  ... body ...)
+</pre>
+</div>
+<p>
+함수를 <a href="emacs.html">Emacs</a> 커맨드로 쓰려면 <code>interactive</code> 를 선언해 주어야 합니다.
+</p>
+<div class="org-src-container">
+<pre class="src src-lisp">(<span style="color: #51afef;">defun</span> <span style="color: #c678dd;">function-name</span> (...)
+  <span style="color: #83898d;">"documentation"</span>
+  (interactive)
+  ... body ...)
+</pre>
 </div>
 </div>
 </div>
@@ -398,6 +680,6 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 21일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
