Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -63,6 +63,7 @@ gtag('config', 'UA-44534026-1');
 Swift</a>: <code>NSPredicate</code> 가이드 글</li>
 <li><a target="_blank" href="https://sarunw.com/posts/sign-in-with-apple-1/">Sign in with Apple, Part 1:
 Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글</li>
+<li><a target="_blank" href="https://sarunw.com/posts/sign-in-with-apple-2/">Sign in with Apple, Part 2: Private Email Relay Service</a>: 이메일 숨기기</li>
 <li><a target="_blank" href="https://engineering.linecorp.com/ko/blog/ios-code-signing/?fbclid=IwAR1I2SIo6YNQGwCGNy5N64viCyQ4PiWm2-8pd-v-rp1aXpjJ9flP19rNBdg">iOS 코드 서명에 대해서</a>: 애플의 개발자 인증서나 프로비저닝을 분석한 글</li>
 </ul>
 </div>
@@ -76,6 +77,6 @@ Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
