--- a/sitemap.html
+++ b/sitemap.html
@@ -98,6 +98,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
 <li><a href="non-dev-links.html">비개발 관련 정보 링크 모음</a></li>
 <li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
+<li><a href="migrate-to-python3.html">수동으로 Python 3로 옮겨가기</a></li>
 <li><a href="english.html">영어 노트</a></li>
 <li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
 <li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
