--- a/python.html
+++ b/python.html
@@ -62,6 +62,7 @@ gtag('config', 'UA-44534026-1');
 <h2 id="orge25f44a">관련된 글 목록</h2>
 <div class="outline-text-2" id="text-orge25f44a">
 <ul class="org-ul">
+<li><a href="migrate-to-python3.html">수동으로 Python 3로 옮겨가기</a></li>
 <li><a href="./python-3-static-typing.html">Python 3 Static Typing</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
 <li><a href="poetry.html">Poetry</a></li>
@@ -152,6 +153,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
