--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -140,9 +140,14 @@ gtag('config', 'UA-44534026-1');
 <ul class="org-ul">
 <li><code>SPC w s</code> 창을 위아래로 나누기</li>
 <li><code>SPC w v</code> 창을 좌우로 나누기</li>
+<li><code>SPC w w</code> 다음 창으로 포커스(커서) 이동</li>
 <li><code>SPC w c</code> 창 닫기</li>
-<li><code>SPC w j 혹은 k</code> 아래쪽 창 혹은 윗쪽 창으로 이동하기<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></li>
-<li><code>SPC w h 혹은 l</code> 왼쪽 창 혹은 오른쪽쪽 창으로 이동하기<sup><a id="fnr.2" class="footref" href="#fn.2">2</a></sup></li>
+<li><code>SPC w j</code> 혹은 <code>SPC w k</code> 아래쪽 창 혹은 윗쪽 창으로 이동하기<sup><a id="fnr.1" class="footref" href="#fn.1">1</a></sup></li>
+<li><code>SPC w h</code> 혹은 <code>SPC w l</code> 왼쪽 창 혹은 오른쪽쪽 창으로 이동하기<sup><a id="fnr.2" class="footref" href="#fn.2">2</a></sup></li>
+<li><code>SPC w o</code> 하나의 창을 많이 크게 만들기</li>
+<li><code>SPC w C-o</code> 현재 창만 남기고 다른 창 닫기</li>
+<li><code>SPC w =</code> 모든 창의 크기를 비슷하게 맞추기</li>
+<li><code>C-w C-w</code> 혹은 <code>C-x o</code> 지정된 캐릭터의 윈도우로 스위칭(ace-window)</li>
 </ul>
 </div>
 </div>
@@ -311,14 +316,12 @@ gtag('config', 'UA-44534026-1');
 <h2 class="footnotes">Footnotes: </h2>
 <div id="text-footnotes">
 
-<div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"><p class="footpara">j, k 키는 Vi에서 쓰는
-커서 이동키의 방향과 동일합니다.</p></div></div>
+<div class="footdef"><sup><a id="fn.1" class="footnum" href="#fnr.1">1</a></sup> <div class="footpara"><p class="footpara">j, k 키는 Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
-<div class="footdef"><sup><a id="fn.2" class="footnum" href="#fnr.2">2</a></sup> <div class="footpara"><p class="footpara">역시 h, l 키는
-Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
+<div class="footdef"><sup><a id="fn.2" class="footnum" href="#fnr.2">2</a></sup> <div class="footpara"><p class="footpara">역시 h, l 키는 Vi에서 쓰는 커서 이동키의 방향과 동일합니다.</p></div></div>
 
 
 </div>
-</div><div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
