--- a/python-links.html
+++ b/python-links.html
@@ -46,6 +46,14 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="outline-container-orgde00849" class="outline-2">
+<h2 id="orgde00849">좋은 글들</h2>
+<div class="outline-text-2" id="text-orgde00849">
+<ul class="org-ul">
+<li><a target="_blank" href="https://github.com/satwikkansal/wtfpython">What the f*ck Python! 😱</a>: 파이썬의 요상한 문법 및 기능을 통한 파이썬 설명</li>
+</ul>
+</div>
+</div>
+<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
