--- a/web-dev-links.html
+++ b/web-dev-links.html
@@ -94,6 +94,7 @@ gtag('config', 'UA-44534026-1');
 <li><a target="_blank" href="https://brumm.af/shadows">Make a smooth shadow, friend</a>: 여러 레이어를
 활용한 부드러운 그림자 CSS 코드를 만들어주는 도구 웹페이지</li>
 <li><a target="_blank" href="https://csslayout.io">CSS Layout</a>: 66개의 CSS 레이아웃 패턴</li>
+<li><a target="_blank" href="https://css.gg">500+ CSS Icons</a>: 순수 CSS로 작성된 500개 이상의 아이콘 벡터 이미지들</li>
 </ul>
 </div>
 </div>
@@ -122,6 +123,6 @@ ES6(일부), ES7(일부) 지원.</li>
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 24일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
