Update several pages

--- a/english.html
+++ b/english.html
@@ -47,12 +47,13 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#orgba92906">do가 너무 많이 보여요!</a></li>
 <li><a href="#org66f17a1">'must' VS 'have to'</a></li>
 <li><a href="#org67fc46e">as if</a></li>
-<li><a href="#orgbd89691">get rid of</a></li>
 <li><a href="#orga4c38d3">기타 짧은 표현 메모들</a>
 <ul>
+<li><a href="#orgbd89691">get rid of</a></li>
 <li><a href="#orgf9ae117">grounded</a></li>
 <li><a href="#org5e99c91">at a glance</a></li>
 <li><a href="#org58fa79f">caveats</a></li>
+<li><a href="#orgbbcf738">no such thing as ()</a></li>
 </ul>
 </li>
 <li><a href="#org831915e">기타 메모</a>
@@ -264,26 +265,15 @@ It seems as if I spend day and night at the office
 </p>
 </div>
 </div>
-<div id="outline-container-orgbd89691" class="outline-2">
-<h2 id="orgbd89691">get rid of</h2>
-<div class="outline-text-2" id="text-orgbd89691">
-<blockquote>
+<div id="outline-container-orga4c38d3" class="outline-2">
+<h2 id="orga4c38d3">기타 짧은 표현 메모들</h2>
+<div class="outline-text-2" id="text-orga4c38d3">
+</div>
+<div id="outline-container-orgbd89691" class="outline-3">
+<h3 id="orgbd89691">get rid of</h3>
+<div class="outline-text-3" id="text-orgbd89691">
 <p>
-무엇의 사라짐을 가진다&#x2026; 오호 직역하니 뭔가 멋진걸?
-</p>
-</blockquote>
-<p>
-근데 이건 직역한 것이 그다지 틀리진 않네요. 정말 '없애다, 치우다, 사라지게
-하다'의 의미입니다. 더이상 필요없는 것을 치우다는 의미와 가깝겠네요.
-</p>
-
-<p>
-get의 의미가 무작정 사물을 '가진다' 라는 의미는 아니라는 점에 집중하면 편하게
-이해될지도 모르겠어요. 예를 들자면 get marry 라는 말은 결혼 했다는 의미거든요.
-</p>
-
-<p>
-뭔가 더 복잡해졌는데, 사실 위 표현은 다른 의미도 있어요. 해결한다는 의미 말이죠.
+'없애다, 치우다, 사라지게 하다'의 의미입니다. 더이상 필요없는 것을 치우다는 의미와 가깝겠네요.
 </p>
 <blockquote>
 <p>
@@ -298,10 +288,6 @@ Getting rid of the homework
 아 영어 더럽네&#x2026;
 </p>
 </div>
-</div>
-<div id="outline-container-orga4c38d3" class="outline-2">
-<h2 id="orga4c38d3">기타 짧은 표현 메모들</h2>
-<div class="outline-text-2" id="text-orga4c38d3">
 </div>
 <div id="outline-container-orgf9ae117" class="outline-3">
 <h3 id="orgf9ae117">grounded</h3>
@@ -325,6 +311,19 @@ Getting rid of the homework
 <p>
 가끔 문서 등에 이게 써 있으면 '경고' 혹은 '전제조건' 등을 의미합니다. 주의하라는 거죠.
 </p>
+</div>
+</div>
+<div id="outline-container-orgbbcf738" class="outline-3">
+<h3 id="orgbbcf738">no such thing as ()</h3>
+<div class="outline-text-3" id="text-orgbbcf738">
+<p>
+세상에 () 그런 건 없어.
+</p>
+<blockquote>
+<p>
+There's no such thing as monsters.
+</p>
+</blockquote>
 </div>
 </div>
 </div>
@@ -355,6 +354,6 @@ Getting rid of the homework
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2019년 12월 23일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2019년 12월 26일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
