--- a/sitemap.html
+++ b/sitemap.html
@@ -71,6 +71,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="python.html">Python</a></li>
 <li><a href="python-3-f-string.html">Python 3 F-string</a></li>
 <li><a href="python-3-static-typing.html">Python 3 Static Typing</a></li>
+<li><a href="python-update-log.html">Python 업데이트 기록</a></li>
 <li><a href="spacemacs.html">Spacemacs</a></li>
 <li><a href="swift.html">Swift</a></li>
 <li><a href="swift-5-1.html">Swift 5.1</a></li>
@@ -96,6 +97,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
 <li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
 <li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
+<li><a href="minecraft.html">마인크래프트</a></li>
 <li><a href="non-dev-links.html">비개발 관련 정보 링크 모음</a></li>
 <li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
 <li><a href="migrate-to-python3.html">수동으로 Python 3로 옮겨가기</a></li>
